add data module, make mock repo for mails, add paging, create viewmodel for maillist

--- a/app/src/main/res/layout/fragment_messages_list.xml
+++ b/app/src/main/res/layout/fragment_messages_list.xml
@@ -12,5 +12,5 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation="vertical"
         tools:itemCount="10"
-        tools:listitem="@layout/item_message"/>
+        tools:listitem="@layout/item_mail"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
