add sending a message

--- a/app/src/main/res/layout/fragment_messages_list.xml
+++ b/app/src/main/res/layout/fragment_messages_list.xml
@@ -20,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:indicatorColor="?colorPrimary"
+        app:indicatorColor="?colorSurface"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
