--- a/app/src/main/res/layout/item_loading_mail.xml
+++ b/app/src/main/res/layout/item_loading_mail.xml
@@ -40,5 +40,5 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:visibility="gone"
-        app:indicatorColor="?colorSurface" />
+        app:indicatorColor="?colorPrimaryVariant" />
 </FrameLayout>
