--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/main_navigation.xml"
-    app:startDestination="@id/signInFragment"
+    app:startDestination="@id/messagesListFragment"
     xmlns:tools="http://schemas.android.com/tools">
 
     <fragment
@@ -39,28 +39,13 @@
         <action
             android:id="@+id/openEditing"
             app:destination="@id/editProfileFragment" />
+        <action android:id="@+id/logOut"
+            app:destination="@id/auth_navigation"
+            app:popUpTo="@id/messagesListFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/editProfileFragment"
         android:name="com.github.daniilbug.lifeisbetter.ui.EditProfileFragment"
         android:label="EditProfileFragment" />
-    <fragment
-        android:id="@+id/signInFragment"
-        android:name="com.github.daniilbug.lifeisbetter.ui.SignInFragment"
-        android:label="SignInFragment"
-        tools:layout="@layout/fragment_sign_in">
-        <action
-            android:id="@+id/signIn"
-            app:popUpTo="@id/signInFragment"
-            app:popUpToInclusive="true"
-            app:destination="@id/messagesListFragment" />
-        <action
-            android:id="@+id/openSignUp"
-            app:destination="@id/signUpFragment" />
-    </fragment>
-    <fragment
-        android:id="@+id/signUpFragment"
-        android:name="com.github.daniilbug.lifeisbetter.ui.SignUpFragment"
-        android:label="SignUpFragment"
-        tools:layout="@layout/fragment_sign_up"/>
 </navigation>
