add notification modules, add swipe refreshes

--- a/app/src/main/res/layout/fragment_messages_list.xml
+++ b/app/src/main/res/layout/fragment_messages_list.xml
@@ -24,8 +24,17 @@
             style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:visibility="gone"
             app:indicatorColor="?colorPrimaryVariant"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ViewStub
+            android:id="@+id/messagesListViewStub"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout="@layout/layout_error_list"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
