--- a/app/src/main/res/drawable/ic_logout.xml
+++ b/app/src/main/res/drawable/ic_logout.xml
@@ -1,5 +1,5 @@
-<vector android:height="24dp" android:viewportHeight="384"
-    android:viewportWidth="384" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M341.333,0H42.667C19.093,0 0,19.093 0,42.667V128h42.667V42.667h298.667v298.667H42.667V256H0v85.333C0,364.907 19.093,384 42.667,384h298.667C364.907,384 384,364.907 384,341.333V42.667C384,19.093 364.907,0 341.333,0z"/>
-    <path android:fillColor="#FF000000" android:pathData="M151.147,268.48l30.186,30.187l106.667,-106.667l-106.667,-106.667l-30.186,30.187l55.146,55.147l-206.293,0l0,42.666l206.293,0z"/>
+<vector android:height="24dp" android:viewportHeight="524.235"
+    android:viewportWidth="524.235" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FF000000" android:pathData="m294.882,0h-262.117c-18.094,0 -32.765,14.671 -32.765,32.765v458.706c0,18.094 14.671,32.765 32.765,32.765h262.118c18.094,0 32.765,-14.671 32.765,-32.765v-458.706c-0.001,-18.094 -14.671,-32.765 -32.766,-32.765zM229.353,294.882c-18.096,0 -32.765,-14.671 -32.765,-32.765 0,-18.096 14.669,-32.765 32.765,-32.765s32.765,14.669 32.765,32.765c0,18.095 -14.669,32.765 -32.765,32.765z"/>
+    <path android:fillColor="#FF000000" android:pathData="m524.235,262.118 l-114.676,-98.294v65.529h-49.147v65.529h49.147v65.529z"/>
 </vector>
