--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,6 @@
 <resources>
     <color name="colorBeige">#F7F1E4</color>
     <color name="colorOrangeDark">#EAC03B</color>
-    <color name="colorOrange">#FFD54F</color>
+    <color name="colorOrange">#FFE57F</color>
     <color name="colorGrey">#E3E3E3</color>
 </resources>
